--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <div class="wrapper" id="wrapper">
     <header>
       <div class="banner row" id="banner">
-        <div class="parallax text-center" style="background-image: url(img/1.jpg);">
+        <div class="parallax text-center" style="background-image: url(img/cover.jpg);">
           <div class="parallax-pattern-overlay">
             <div class="container text-center" style="height:600px;padding-top:170px;">
-              <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt=""/></a>
-              <h2 class="intro"><a href="index.html">My Resume</a></h2>
+              <!-- <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.jpg" alt=""/></a> -->
+              <h2 class="intro"><a href="index.html">Welcome to My Portfolio</a></h2>
             </div>
           </div>
         </div>
@@ -48,10 +48,10 @@
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
-                        <li class="menuItem"><a href="#aboutus">About Us</a></li>
-                        <li class="menuItem"><a href="#specialties">Skills</a></li>
-                        <li class="menuItem"><a href="#gallery">Portfolio</a></li>
-                        <li class="menuItem"><a href="#feedback">Education</a></li>
+                        <li class="menuItem"><a href="#aboutus">Resume</a></li>
+                        <!-- <li class="menuItem"><a href="#specialties">Skills</a></li> -->
+                        <li class="menuItem"><a href="#gallery">Projects</a></li>
+                        <!-- <li class="menuItem"><a href="#feedback">Education</a></li> -->
                         <li class="menuItem"><a href="#contact">Contact</a></li>
                       </ul>
                     </div>
@@ -68,22 +68,20 @@
     <section class="aboutus" id="aboutus">
       <div class="container">
         <div class="heading text-center">
-          <h2>About Me</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis. Morbi justo sem, cursus nec convallis a, pellentesque eu mi. Morbi hendrerit ultricies ligula </h3>
+          <h2>Donavan K Brown</h2>
+          <h3>Hey my name is Donavan and I love Math, Reading, and Coding. I love sports and I go to the gym daily. Oh yeah.. I also trade stock options & crypto-currencies. </h3>
         </div>
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-12">
             <div class="papers text-center">
-              <img src="img/team/1.jpg" alt=""><br/>
-              <a href="#"><b>Download my resume</b></a>
-              <h4 class="">My Teacher John Vandeley</h4>
+              <img src="img/2.jpg" alt=""><br/>
+              <a href="updatedResume.pdf"><b>Download my resume</b></a>
+              <h4 class=""></h4>
               <p>
-                Have you ever felt worried that your party will not raise up to your guest expectations? In design, vertical rhythm is the structure that guides a reader's eye through the content. Good vertical rhythm makes a layout more balanced and beautiful and its
-                content more readable. The time signature in sheet music visually depicts a song's rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines.
               </p>
             </div>
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <div class="papers text-center">
               <img src="img/team/2.jpg" alt=""><br/>
               <a href="#"><b>Download my resume</b></a>
@@ -93,14 +91,14 @@
                 content more readable. The time signature in sheet music visually depicts a song's rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
 
 
     <!--skills-->
-    <section class="specialties" id="specialties">
+    <!-- <section class="specialties" id="specialties">
       <div class="container">
         <div class="heading text-center">
           <h2>Our Skills</h2>
@@ -239,15 +237,15 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
     <!--portfolio-->
     <section class="gallery" id="gallery">
       <div class="container">
         <div class="heading text-center">
-          <h2>Portfolio</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis.</h3>
+          <h2>Projects</h2>
+          <h3>Checkout a few of my projects! Here's a project I worked on with my team and a couple of indivdual projects.</h3>
         </div>
 
         <div id="grid-gallery" class="grid-gallery">
@@ -282,7 +280,7 @@
                   </figcaption>
                 </figure>
               </li>
-              <li>
+              <!-- <li>
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                   <figcaption>
@@ -328,7 +326,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                   </figcaption>
                 </figure>
-              </li>
+              </li> -->
 
             </ul>
           </section>
@@ -393,7 +391,7 @@
     </section>
 
     <!--education-->
-    <section class="feedback" id="feedback">
+    <!-- <section class="feedback" id="feedback">
       <div class="container">
         <div class="heading">
           <h2>Education</h2>
@@ -445,15 +443,15 @@
             and its content more readable. The time signature in sheet music visually depicts a song’s rhythm, while for us, the lines of the baseline grid depict the rhythm of our content and give us guidelines. <cite>Marta Kay, Business Development<br/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></cite>            </blockquote>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!--education-->
     <section class="contact" id="contact">
       <div class="container">
         <div class="heading">
           <h2>Contact</h2>
-          <h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
-				 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3>
+          <!-- <h3>Phasellus non dolor nibh. Nullam elementum tellus pretium feugiat.<br>
+				 Cras dictum tellus dui, vitae sollicitudin ipsum tincidunt in. Sed tincidunt tristique enim sed sollcitudin.</h3> -->
         </div>
       </div>
 
@@ -468,13 +466,13 @@
           <div class="contact-info">
             <div class="col-md-5">
               <h4>My Contact Info</h4>
-              <h5>Nullam elementum tellus pretium feugiat</h5>
-              <p>Fusce fermen tum neque a rutrum varius odio pede ullamcorp-er tellus ut dignissim nisi risus non tortor</p>
+              <!-- <h5>Nullam elementum tellus pretium feugiat</h5>
+              <p>Fusce fermen tum neque a rutrum varius odio pede ullamcorp-er tellus ut dignissim nisi risus non tortor</p> -->
               <ul>
-                <li><i class="fa fa-home fa-2x"></i> Home # 38, Suite 54 Elizebth Street</li>
-                <li><i class="fa fa-phone fa-2x"></i> +38 000 129900</li>
-                <li><i class="fa fa-envelope fa-2x"></i> info@domain.net</li>
-                <li><i class="fa fa-download fa-2x"></i> Download My Resume</li>
+                <li><i class="fa fa-home fa-2x"></i> Fishtown, Philadelphia, PA</li>
+                <li><i class="fa fa-phone fa-2x"></i>+732-947-9396</li>
+                <li><i class="fa fa-envelope fa-2x"></i> donavankbrown@gmail.com</li>
+                <!-- <li><i class="fa fa-download fa-2x"></i> Download My Resume</li> -->
               </ul>
             </div>
           </div>
