--- a/index.html
+++ b/index.html
@@ -255,30 +255,36 @@
               <!-- for Masonry column width -->
               <li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
+                  <img src="https://user-images.githubusercontent.com/48693333/72358079-01c92d80-36ba-11ea-8ac0-06fa6704a6cd.png" alt="" />
                   <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>WishDish!</h3>
+                    <p>Looking for something to eat? Look no further!</p>
                   </figcaption>
                 </figure>
+                <a href="https://dioris-cpu.github.io/group-Project-1/#"><b>Here's a link to me and my teams first project!</b></a>
+
               </li>
               <li>
                 <figure>
-                  <img src="img/work/2.jpg" alt="" />
+                  <img src="img/workday.jpg" alt="" />
                   <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Work Day Scheduler</h3>
+                    <p>Here you'll be able to set a schedule and stick to it!</p>
                   </figcaption>
                 </figure>
+                <a href="https://dkb715.github.io/5HW/"><b>Here's a link to it!</b></a>
+
               </li>
               <li>
                 <figure>
-                  <img src="img/work/3.jpg" alt="" />
+                  <img src="img/password generator.jpg" alt="" />
                   <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Password Generator</h3>
+                    <p>Need to make a strong password? Let me help you with that.</p>
                   </figcaption>
                 </figure>
+                <a href="https://dkb715.github.io/homework-3/"><b>Click here to generate a random password!</b></a>
+
               </li>
               <!-- <li>
                 <figure>
@@ -349,7 +355,7 @@
                   <img src="img/work/3.jpg" alt="" />
                 </figure>
               </li>
-              <li>
+              <!-- <li>
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                 </figure>
@@ -375,7 +381,7 @@
                 <figure>
                   <img src="img/work/8.jpg" alt="" />
                 </figure>
-              </li>
+              </li> -->
             </ul>
             <nav>
               <span class="icon nav-prev"></span>
@@ -457,11 +463,11 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-7">
+          <!-- <div class="col-md-7">
             <div class="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
-          </div>
+          </div> -->
 
           <div class="contact-info">
             <div class="col-md-5">
@@ -472,6 +478,9 @@
                 <li><i class="fa fa-home fa-2x"></i> Fishtown, Philadelphia, PA</li>
                 <li><i class="fa fa-phone fa-2x"></i>+732-947-9396</li>
                 <li><i class="fa fa-envelope fa-2x"></i> donavankbrown@gmail.com</li>
+                <li><a href="https://github.com/dkb715"><i class="fa fa-github"> GitHub Profile</i></a></li>
+                <li><a href="https://www.linkedin.com/in/donavan-brown-63382910b/"><i class="fa fa-linkedin"> LinkedIn Profile</i></a></li>
+      
                 <!-- <li><i class="fa fa-download fa-2x"></i> Download My Resume</li> -->
               </ul>
             </div>
@@ -515,13 +524,13 @@
         <a href="#wrapper" class="gototop"><i class="fa fa-angle-double-up fa-2x"></i></a>
       </p>
       <div class="container">
-        <ul>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-          <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-        </ul>
+        <!-- <ul> -->
+          <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li> -->
+          <!-- <li><a href="#"><i class="fa fa-github"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+          <!-- <li><a href="#"><i class="fa fa-flickr"></i></a></li> -->
+        <!-- </ul> -->
         <p>&copy; MyResume Theme. All Rights Reserved.</p>
         <div class="credits">
           <!--
