--- a/index.html
+++ b/index.html
@@ -287,16 +287,19 @@
                 <a href="https://github.com/dkb715/homework-3"><b>GitHub Repo Link</b></a>
 
               </li>
-              <!-- <li>
+              <li>
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                   <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Employee Team Summary</h3>
+                    <p>Need quick access to your teams contact info? I gotchu</p>
                   </figcaption>
                 </figure>
+		<a href="https://dkb715.github.io/summary4/"><b>Click here to create a team page!</b></a>
+                <a href="https://github.com/dkb715/summary4"><b>GitHub Repo Link</b></a>
+
               </li>
-              <li>
+<!--               <li>
                 <figure>
                   <img src="img/work/5.jpg" alt="" />
                   <figcaption>
@@ -333,7 +336,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                   </figcaption>
                 </figure>
-              </li> -->
+              </li> --> -->
 
             </ul>
           </section>
@@ -356,12 +359,12 @@
                   <img src="img/work/3.jpg" alt="" />
                 </figure>
               </li>
-              <!-- <li>
+               <li>
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                 </figure>
               </li>
-              <li>
+              <!-- <li>
                 <figure>
                   <img src="img/work/5.jpg" alt="" />
                 </figure>
