--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               </li>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src="img/teamsummary.jpg" alt="" />
                   <figcaption>
                     <h3>Employee Team Summary</h3>
                     <p>Need quick access to your teams contact info? I gotchu</p>
