--- a/index.html
+++ b/index.html
@@ -307,20 +307,10 @@
                     <p>Here you can easily access your employee database through the terminal.</p>
                   </figcaption>
                 </figure>
-              </li>
-              <li>
-                <figure>
-                  <img src="img/work/6.jpg" alt="" />
-                  <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </figcaption>
-                </figure>
                 <a href="https://github.com/dkb715/Employee_Tracker113"><b>Click here to create a team page!</b></a>
 
               </li>
-
-              <li>
+                            <li>
                 <figure>
                   <img src="img/burger.png" alt="" />
                   <figcaption>
@@ -332,7 +322,30 @@
 
               </li>
 
-              <li>
+              <!-- <li>
+                <figure>
+                  <img src="img/employee.png" alt="" />
+                  <figcaption>
+                    <h3>Vitae fringilla elit</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </figcaption>
+                </figure>
+
+              </li> -->
+
+              <!-- <li>
+                <figure>
+                  <img src="img/burger.png" alt="" />
+                  <figcaption>
+                    <h3>Eat Da Burger!</h3>
+                    <p>This app allows you to create a burger menu.</p>
+                  </figcaption>
+                </figure>
+                <a href="https://github.com/dkb715/mvc"><b>Click here to Eat Da Burger!</b></a>
+
+              </li> -->
+
+              <!-- <li>
                 <figure>
                   <img src="img/work/8.jpg" alt="" />
                   <figcaption>
@@ -341,7 +354,7 @@
                   </figcaption>
                 </figure>
               </li> --> -->
-
+ -->
             </ul>
           </section>
           <!-- // end small images -->
