--- a/index.html
+++ b/index.html
@@ -322,16 +322,17 @@
 
               </li>
 
-              <!-- <li>
+              <li>
                 <figure>
-                  <img src="img/employee.png" alt="" />
+                  <img src="img/carproject.png" alt="" />
                   <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Philly Car Emporium!</h3>
+                    <p>Looking for the best cars for sale around Philly? Come on over!</p>
                   </figcaption>
                 </figure>
+                <a href="https://philly-car-emporium.herokuapp.com/"><b>Click here to see our website!</b></a>
 
-              </li> -->
+              </li>
 
               <!-- <li>
                 <figure>
