--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
                   </figcaption>
                 </figure>
                 <a href="https://philly-car-emporium.herokuapp.com/"><b>Click here to see our website!</b></a>
+                <a href="https://github.com/danachen99/project2"><b>Click here to go to our github!</b></a>
 
               </li>
 
