--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   </figcaption>
                 </figure>
                 <a href="https://dioris-cpu.github.io/group-Project-1/#"><b>Here's a link to me and my teams first project!</b></a>
-                <a href="https://github.com/Dioris-cpu/group-Project-1"><b>GitHub Repo Link</b></a>
+                <a href="https://github.com/Dioris-cpu/group-Project-1"><b>Click here to go to our github!</b></a>
               </li>
               <li>
                 <figure>
@@ -273,7 +273,7 @@
                   </figcaption>
                 </figure>
                 <a href="https://dkb715.github.io/5HW/"><b>Here's a link to it!</b></a>
-                <a href="https://github.com/dkb715/5HW"><b>GitHub Repo Link</b></a>
+                <a href="https://github.com/dkb715/5HW"><b>Click here to go to our github!</b></a>
               </li>
               <li>
                 <figure>
@@ -284,7 +284,7 @@
                   </figcaption>
                 </figure>
                 <a href="https://dkb715.github.io/homework-3/"><b>Click here to generate a random password!</b></a>
-                <a href="https://github.com/dkb715/homework-3"><b>GitHub Repo Link</b></a>
+                <a href="https://github.com/dkb715/homework-3"><b>Click here to go to our github!</b></a>
 
               </li>
               <li>
@@ -296,7 +296,7 @@
                   </figcaption>
                 </figure>
 		<a href="https://dkb715.github.io/summary4/"><b>Click here to create a team page!</b></a>
-                <a href="https://github.com/dkb715/summary4"><b>GitHub Repo Link</b></a>
+                <a href="https://github.com/dkb715/summary4"><b>Click here to go to our github!</b></a>
 
               </li>
              <li> 
@@ -307,7 +307,7 @@
                     <p>Here you can easily access your employee database through the terminal.</p>
                   </figcaption>
                 </figure>
-                <a href="https://github.com/dkb715/Employee_Tracker113"><b>Click here to create a team page!</b></a>
+                <a href="https://github.com/dkb715/Employee_Tracker113"><b>Click here to create a team page in the terminal!</b></a>
 
               </li>
                             <li>
